Manual User Guide까지 완성

--- a/_posts/userguide/userguidelist/2023-09-05-17run-post.md
+++ b/_posts/userguide/userguidelist/2023-09-05-17run-post.md
@@ -4,5 +4,17 @@ title: 17. Run
 category: userguidelist
 ---
 
-## 17. Run
+# 17. Run
 
+<p align='Center'>
+    <img src="https:nextfoam.co.kr/baramManual/userguide/17.1.png"><br>
+    그림 17.1
+</p>
+
+* Start Calculation : 계산을 시작한다.<br>
+
+* Cancle Calcuation : 계산을 강제로 중지한다.<br>
+
+* Save and Stop Calculation : 계산을 저장하고 중지한다.<br>
+
+* Update Configuration : 계산을 저장하고 중지한다.<br>
