--- a/_posts/tutorials/2023-09-05-ABL-post.md
+++ b/_posts/tutorials/2023-09-05-ABL-post.md
@@ -6,16 +6,18 @@ category: tutorials
 
 # 08. ABL 
  
+* [격자 파일](https://drive.google.com/file/d/19kMYRiWaB84kaUzCoobMRZBKCc_uKxVU/view?usp=drive_link)
+
 ## 1) 개요 
--본 예제는 대기 경계층 유동해석 예제이다.<br>
+* 본 예제는 대기 경계층 유동해석 예제이다.<br>
 
--해석 영역은 600m X 50m X 600m이다. <br>
+* 해석 영역은 600m X 50m X 600m이다. <br>
 
--대기경계층 조건으로 주어진 입구의 속도 분포가 출구까지 유지되는지를 확인한다.<br>
+* 대기경계층 조건으로 주어진 입구의 속도 분포가 출구까지 유지되는지를 확인한다.<br>
 
--격자는 주어진 OpenFoam 격자를 사용한다<br>
+* 격자는 주어진 OpenFOAM 격자를 사용한다<br>
 
--그림 8.1에서 형상과 격자를 나타내었다.<br>
+* 그림 8.1에서 형상과 격자를 나타내었다.<br>
 
 <p align='center'>
     <img src="https:nextfoam.co.kr/baramManual/ABL/8.1.png"><br>
@@ -34,7 +36,7 @@ category: tutorials
 
 ●  유동 조건 : 대기경계층 속도 및 난류 조건<br>
 
-대기 경계층 조건은 OpenFoam이 제공하는 조건으로 D.M. Hargreaves and N.G. Wright의 논문<br>
+대기 경계층 조건은 OpenFOAM이 제공하는 조건으로 D.M. Hargreaves and N.G. Wright의 논문<br>
 (On the use of the k-epsilon model in commercial CFD software to model the neutral atmospheric boundary layer)<br>
 식을 이용한다.
 
@@ -61,8 +63,8 @@ BARAM을 실행하면 아래 과정을 따라서 case 파일을 만든다.<br>
 ● Species Model : Not Include<br>
 
 ## 2) 격자
-격자는 주어진 OpenFoam의 polyMesh 폴더를 활용한다. <br>
-상단 탭에서 File - Load Mesh - OpenFoam 순서대로 클릭하고 polyMesh 폴더를 선택한다. <br>
+격자는 주어진 OpenFOAM의 polyMesh 폴더를 활용한다. <br>
+상단 탭에서 File - Load Mesh - OpenFOAM 순서대로 클릭하고 polyMesh 폴더를 선택한다. <br>
 
 ## 3) 계산 조건
 ### (1) General
