--- a/_posts/tutorials/2023-09-05-ABL-post.md
+++ b/_posts/tutorials/2023-09-05-ABL-post.md
@@ -20,7 +20,7 @@ category: tutorials
 * 그림 8.1에서 형상과 격자를 나타내었다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.1.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.1.png"><br>
     그림 8.1
 </p>
 
@@ -41,12 +41,12 @@ category: tutorials
 식을 이용한다.
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.2.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.2.png"><br>
     그림 8.2
 </p>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.3.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.3.png"><br>
     그림 8.3
 </p>
 
@@ -74,7 +74,7 @@ BARAM을 실행하면 아래 과정을 따라서 case 파일을 만든다.<br>
 난류 모델은 𝑘 − ε 모델을 사용하고 나머지는 Default를 사용한다. <br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.4.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.4.png"><br>
     그림 8.4
 </p>
 
@@ -97,7 +97,7 @@ Cell Zone Conditions은 Default 조건을 사용한다.<br>
 ```Minimum z-coordinate : 0.0 (m)```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.5.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.5.png"><br>
     그림 8.5
 </p>
 
@@ -105,7 +105,7 @@ Cell Zone Conditions은 Default 조건을 사용한다.<br>
 ```Velocity Condition : No Slip```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.6.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.6.png"><br>
     그림 8.6
 </p>
 
@@ -113,7 +113,7 @@ Cell Zone Conditions은 Default 조건을 사용한다.<br>
 ```Total Pressure : 0 (Pa)```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.7.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.7.png"><br>
     그림 8.7
 </p>
 
@@ -133,12 +133,12 @@ Numerical Conditions은 다음과 같이 설정한다.<br>
 ●  나머지는 Default 조건을 사용한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.8.1.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.8.1.png"><br>
     그림 8.8.1
 </p>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.8.2.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.8.2.png"><br>
     그림 8.8.2
 </p>
 
@@ -153,7 +153,7 @@ Numerical Conditions은 다음과 같이 설정한다.<br>
 ```Turbulent Viscosity Ratio : 10```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.9.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.9.png"><br>
     그림 8.9
 </p>
 
@@ -169,14 +169,14 @@ Run Conditions에서 다음과 같이 설정 후 계산을 진행한다.<br>
 ●  Number of Cores : 1  <br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.10.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.10.png"><br>
     그림 8.10
 </p>
 
 계산이 완료된 모습
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.11.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.11.png"><br>
     그림 8.11
 </p>
 
@@ -189,14 +189,14 @@ paraview 아이콘을 클릭하여 paraview를 실행한다.<br>
 Case Type을 Reconstructed Case로 변경한다.
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.12.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.12.png"><br>
     그림 8.12
 </p>
 
 상단 툴바의 Solid Color를 U로 변경한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.13.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.13.png"><br>
     그림 8.13
 </p>
 
@@ -211,23 +211,23 @@ Case Type을 Reconstructed Case로 변경한다.
 ●  Series Parameters : U_Magnitude<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.14.1.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.14.1.png"><br>
     그림 8.14.1
 </p>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.14.2.png"><br>
-    그림 8.14.2
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.14.2.png"><br>
+    그림 8.14
 </p>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.14.3.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.14.3.png"><br>
     그림 8.14.3
 </p>
 
 아래 그림과 같이 높이에 따른 속도 크기 분포를 확인할 수 있다.
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/ABL/8.15.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.15.png"><br>
     그림 8.15
 </p>
