--- a/_posts/tutorials/2023-09-05-KCS-post.md
+++ b/_posts/tutorials/2023-09-05-KCS-post.md
@@ -21,7 +21,7 @@ D H, Experiments in Fluids, 2001)<br>
 -그림 23.1에서 형상과 격자를 나타내었다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.1.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.1.png"><br>
     그림 23.1
 </p>
 
@@ -54,7 +54,7 @@ Time은 Steady, Gravity는 (0 0 -9.81)로 설정한다.<br>
 나머지는 Default로 설정한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.2.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.2.png"><br>
     그림 23.2
 </p>
 
@@ -63,7 +63,7 @@ Time은 Steady, Gravity는 (0 0 -9.81)로 설정한다.<br>
 난류 모델은 SST k-ω 모델, Multiphase - Volume of Fluid 방법을 사용하고 나머지는 Default로 사용한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.3.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.3.png"><br>
     그림 23.3
 </p>
 
@@ -79,7 +79,7 @@ Time은 Steady, Gravity는 (0 0 -9.81)로 설정한다.<br>
 ```Viscosity : 1.79e-5```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.4.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.4.png"><br>
     그림 23.4
 </p>
 
@@ -88,7 +88,7 @@ Cellzome에 2가지의 유체가 포함되어 있으므로 아래와 같이 Prim
 Surface Tension은 0으로 입력한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.5.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.5.png"><br>
     그림 23.5
 </p>
 
@@ -96,7 +96,7 @@ Surface Tension은 0으로 입력한다.<br>
 아래와 같이 경계면 타입과 경계값을 설정한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.6.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.6.png"><br>
     그림 23.6
 </p>
 
@@ -106,7 +106,7 @@ Surface Tension은 0으로 입력한다.<br>
 ```Turbulent Viscosity Ratio : 10```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.7.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.7.png"><br>
     그림 23.7
 </p>
 
@@ -116,7 +116,7 @@ Surface Tension은 0으로 입력한다.<br>
 ```Turbulent Viscosity Ratio : 10```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.8.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.8.png"><br>
     그림 23.8
 </p>
 
@@ -141,7 +141,7 @@ Surface Tension은 0으로 입력한다.<br>
 ***●  Velocity : 2.196***<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.9.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.9.png"><br>
     그림 23.9
 </p>
 
@@ -154,7 +154,7 @@ Under-Relaxation Factors는 모두 1을 사용한다.<br>
 나머지는 Default조건을 사용한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.10.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.10.png"><br>
     그림 23.10
 </p>
 
@@ -171,7 +171,7 @@ Add-Force 선택후, 관찰하고자 힘의 방향과 영역은 아래와 같이
 ```Boundaries : KCS_dummy_hub, KCS_hub_aft, KCS_hub_cap, KCS_hull, KSC_transom, KCS_deek```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.11.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.11.png"><br>
     그림 23.11
 </p>
 
@@ -187,7 +187,7 @@ Add-Force 선택후, 관찰하고자 힘의 방향과 영역은 아래와 같이
 ```Volume Fraction - Liquid : 0```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.12.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.12.png"><br>
     그림 23.12
 </p>
 
@@ -200,7 +200,7 @@ Add-Force 선택후, 관찰하고자 힘의 방향과 영역은 아래와 같이
 ```Volume Fraction - Liquid : 1```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/kcs/23.13.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.13.png"><br>
     그림 23.13
 </p>
 
