--- a/_posts/tutorials/2023-09-05-weir-post.md
+++ b/_posts/tutorials/2023-09-05-weir-post.md
@@ -16,7 +16,7 @@ category: tutorials
 -그림 19.1에서 형상과 격자를 나타내었다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.1.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.1.png"><br>
     그림 19.1
 </p>
 
@@ -52,7 +52,7 @@ Time 을 Transient로 변경한다.<br>
 나머지는 Default로 설정한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.2.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.2.png"><br>
     그림 19.2
 </p>
 
@@ -61,7 +61,7 @@ Time 을 Transient로 변경한다.<br>
 난류 모델은 Realizable 𝑘 − ε  모델을 사용하고 나머지는 Default로 사용한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.3.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.3.png"><br>
     그림 19.3
 </p>
 
@@ -77,11 +77,11 @@ Time 을 Transient로 변경한다.<br>
 ```Density : 1.225```<br>
 ```Viscosity : 1.79e-5```<br>
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.4.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.4.png"><br>
     그림 19.4
 </p>
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.5.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.5.png"><br>
     그림 19.5
 </p>
 
@@ -90,7 +90,7 @@ Cellzome에 2가지의 유체가 포함되어 있으므로 아래와 같이 Prim
 Surface Tension은 0.07로 입력한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.6.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.6.png"><br>
     그림 19.6
 </p>
 
@@ -99,7 +99,7 @@ Surface Tension은 0.07로 입력한다.<br>
 이때, 물이 유입되는 입구의 수두에 해당하는 압력조건을 사용한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.7.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.7.png"><br>
     그림 19.7
 </p>
 
@@ -110,7 +110,7 @@ Surface Tension은 0.07로 입력한다.<br>
 ```Volume Fraction (Liquid) : 1```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.8.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.8.png"><br>
     그림 19.8
 </p>
 
@@ -118,7 +118,7 @@ Surface Tension은 0.07로 입력한다.<br>
 ```totalPressure : 0```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.9.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.9.png"><br>
     그림 19.9
 </p>
 
@@ -129,7 +129,7 @@ Surface Tension은 0.07로 입력한다.<br>
 ***●  out : out flow***<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.20.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.20.png"><br>
     그림 19.10
 </p>
 
@@ -148,7 +148,7 @@ Default값으로 설정한다.<br>
 Add-Surface 선택후 Report Type은 Volume Flow Rate, 관찰하고자 하는 영역은 waterin으로 선택하여준다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.21.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.21.png"><br>
     그림 19.11
 </p>
 
@@ -164,7 +164,7 @@ Liquid 외 영역의 초기조건은 다음과 같이 입력한다.<br>
 ```Volume Fraction - Liquid : 0```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.12.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.12.png"><br>
     그림 19.12
 </p>
 
@@ -183,14 +183,14 @@ Liquid 영역의 초기조건을 주기위해 Initialization-Advanced-Section-Cr
 ```Volume Fraction - Liquid : 1```<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.13.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.13.png"><br>
     그림 19.13
 </p>
 
 지정해준 초기조건의 영역은 아래와 같다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.14.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.14.png"><br>
     그림 19.14
 </p>
 
@@ -214,25 +214,25 @@ Case Type을 Decomposed Case로 변경한다.<br>
 Ctrl + Space를 눌러 Iso Volume을 검색한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.15.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.15.png"><br>
     그림 19.15
 </p>
 
 이후, Properties 탭에서 설정을 아래와 같이 변경한다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.16.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.16.png"><br>
     그림 19.16
 </p>
 
 Field를 U로 변경하고 Play 버튼을 누르면 다음과 같은 모습을 볼 수있다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.17.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.17.png"><br>
     그림 19.17
 </p>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/weir/19.18.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.18.png"><br>
     그림 19.18
 </p>
