User Guide 사진 링크 수정

--- a/_posts/userguide/userguidelist/2023-09-05-04window-post.md
+++ b/_posts/userguide/userguidelist/2023-09-05-04window-post.md
@@ -9,7 +9,7 @@ category: userguidelist
 프로그램을 실행하면 그림 4.1과 같은 창이 나온다.<br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/4.1.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/4.1.png"><br>
     그림 4.1
 </p>
 
@@ -41,6 +41,6 @@ Graphic, Console, Residuals, Monitor는 각 탭을 클릭하면 전환된다.
 |Rotation|Mouse Left Button|
 |Translation|Mouse Wheel Push|
 |Zoom in / out|Mouse Wheel Drag|
-|Paste Select|Ctrl + Mouse Left Button|
+|Surface Select|Ctrl + Mouse Left Button|
 
 ctrl 키를 누른 상태에서 마우스 왼쪽 버튼을 누르면 해당 경계면이 흰색으로 표시된다.
