--- a/_posts/userguide/userguidelist/2023-09-05-08Models-post.md
+++ b/_posts/userguide/userguidelist/2023-09-05-08Models-post.md
@@ -7,14 +7,14 @@ category: userguidelist
 # 08. Models
 
 <p align='Center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/8.1.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/8.1.png"><br>
     그림 8.1
 </p>
 
 해석에 사용할 각종 물리 모델을 설정한다.<br>
 
 <p align='Center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/8.2.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/8.2.png"><br>
     그림 8.2
 </p>
 
@@ -26,7 +26,7 @@ category: userguidelist
     &ensp; - SST k-ω<br>
 
 <p align='Center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/8.3.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/8.3.png"><br>
     그림 8.3
 </p>
 
