--- a/_posts/userguide/userguidelist/2023-09-05-17run-post.md
+++ b/_posts/userguide/userguidelist/2023-09-05-17run-post.md
@@ -7,7 +7,7 @@ category: userguidelist
 # 17. Run
 
 <p align='Center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/17.1.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/17.1.png"><br>
     그림 17.1
 </p>
 
