--- a/_posts/userguide/userguidelist/BoundaryCondition/Wall/2023-09-05-Wall-post.md
+++ b/_posts/userguide/userguidelist/BoundaryCondition/Wall/2023-09-05-Wall-post.md
@@ -9,12 +9,12 @@ category: Wall
 * Wall은 Velocity와 Temperature의 조건을 설정할 수 있으며 설정 방법은 아래와 같다.<br>
 
 <p align='Center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/11.13.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/11.13.png"><br>
     그림 11.13
 </p>
 
 <p align='Center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/11.14.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/11.14.png"><br>
     그림 11.14
 </p>
 
