--- a/_posts/userguide/userguidelist/Menu/2023-09-05-02Mesh-post.md
+++ b/_posts/userguide/userguidelist/Menu/2023-09-05-02Mesh-post.md
@@ -7,28 +7,28 @@ category: userguidelistMenu
 # 5-2 Mesh
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/5.2.1.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/5.2.1.png"><br>
     그림 5.2.1
 </p>
 
 Mesh 각 기능들의 설명은 아래와 같다. <br><br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/5.2.2.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/5.2.2.png"><br>
     그림 5.2.2
 </p>
 
 * Scale : Scaling Factors만큼 축 방향으로 격자의 크기를 조절할 수 있다.<br><br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/5.2.3.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/5.2.3.png"><br>
     그림 5.2.3
 </p>
 
 * Translate : Translation Offsets만큼 축 방향으로 격자를 이동한다.<br><br>
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/5.2.4.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/5.2.4.png"><br>
     그림 5.2.4
 </p>
 
