--- a/_posts/userguide/userguidelist/CellzoneCondtions/2023-09-05-MRF-post.md
+++ b/_posts/userguide/userguidelist/CellzoneCondtions/2023-09-05-MRF-post.md
@@ -7,7 +7,7 @@ category: CellZoneConditions
 # 01. MRF
 
 <p align='Center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/10.2.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/10.2.png"><br>
     그림 10.2
 </p>
 
