--- a/_posts/userguide/userguidelist/Menu/2023-09-05-03Viewpost.md
+++ b/_posts/userguide/userguidelist/Menu/2023-09-05-03Viewpost.md
@@ -7,7 +7,7 @@ category: userguidelistMenu
 # 5-3 View
 
 <p align='center'>
-    <img src="https:nextfoam.co.kr/baramManual/userguide/5.3.1.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/userguide/5.3.1.png"><br>
     그림 5.3.1
 </p>
 
