Tutorials Guide 사진 1차 수정

--- a/_posts/tutorials/2023-09-05-CHT-post.md
+++ b/_posts/tutorials/2023-09-05-CHT-post.md
@@ -42,11 +42,11 @@ category: tutorials
 
 ●  유체의 비열 : 1,006J/kg <br>
 
-●  고체의 밀도 : 2,000𝑘𝑔/㎥ <br>
+●  고체의 밀도 : 7,850𝑘𝑔/㎥ <br>
 
-●  고체의 열전도도 : 2,000𝑘𝑔/㎥ <br>
+●  고체의 열전도도 : 24.3W/mK <br>
 
-●  고체의 비열 : 1,900J/kg <br>
+●  고체의 비열 : 450J/kg <br>
 
 BARAM을 실행하면 아래 과정을 따라서 case 파일을 만든다.<br>
 
@@ -173,11 +173,7 @@ Numerical Conditions은 다음과 같이 설정한다.<br>
 ●  Under-Relaxation Factors<br>
 Under-Relaxation Factors는 Default 값을 사용한다.<br>
 
-●  Convergence Criteria<br>
-```Energy : 1e-6```<br>
-```Pressure : 0.001```<br>
-```Momentum : 0.001```<br>
-```Turbulence : 0.001```<br>
+●  Convergence Criteria는 Default값을 사용한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.9.1.png"><br>
