Tutorials Guide Solver 이름들 수정

--- a/_posts/tutorials/2023-09-05-ABL-post.md
+++ b/_posts/tutorials/2023-09-05-ABL-post.md
@@ -26,7 +26,7 @@ category: tutorials
 
 계산 조건은 다음과 같다. <br>
 
-●  solver : simpleNFoam (넥스트폼이 개발한 비압축성 유동 해석 솔버) <br>
+●  solver : buoyantsimpleNFoam (넥스트폼이 개발한 비압축성 유동 해석 솔버) <br>
 
 ●  난류 모델 : 𝑘 − ε <br>
 
