--- a/_posts/tutorials/2023-09-05-KCS-post.md
+++ b/_posts/tutorials/2023-09-05-KCS-post.md
@@ -27,7 +27,7 @@ D H, Experiments in Fluids, 2001)<br>
 
 계산 조건은 다음과 같다. <br>
 
-●  solver : InterNFoam <br>
+●  solver : interFoam <br>
 
 ●  난류모델 : SST k-ω <br>
 
