--- a/_posts/tutorials/2023-09-05-weir-post.md
+++ b/_posts/tutorials/2023-09-05-weir-post.md
@@ -22,7 +22,7 @@ category: tutorials
 
 계산 조건은 다음과 같다. <br>
 
-●  solver : InterNFoam <br>
+●  solver : interFoam <br>
 
 ●  난류모델 : Realizable 𝑘 − ε <br>
 
