Tutorials Guide Numbering 삭제

--- a/_posts/tutorials/2023-09-05-CHT-post.md
+++ b/_posts/tutorials/2023-09-05-CHT-post.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: 10. Conjugate Heat Transfer (CHT)
+title: 08. Conjugate Heat Transfer (CHT)
 category: tutorials
 ---
 
-# 10. Conjugate Heat Transfer (CHT)
+# Conjugate Heat Transfer (CHT)
 
 * [격자 파일](https://drive.google.com/file/d/1f5GOixMllPA3UXtCD2sPAV8vxpfWI6rI/view?usp=sharing)
 
@@ -21,11 +21,10 @@ category: tutorials
 
 * 막대의 온도는 373K이며, 중력은 -y 방향으로 작용한다.<br>
 
-* 격자는 그림 10.1에 나타내었다.<br>
+* 격자는 아래 그림에 나타내었다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.1.png"><br>
-    그림 10.1
 </p>
 
 계산 조건은 다음과 같다. <br>
@@ -78,12 +77,10 @@ Gravity는 Y축에 -9.81을 입력한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.2.png"><br>
-    그림 10.2
 </p>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.3.png"><br>
-    그림 10.3
 </p>
 
 ***●  Air***<br>
@@ -110,12 +107,10 @@ Gravity는 Y축에 -9.81을 입력한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.3.png"><br>
-    그림 10.4
 </p>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.5.png"><br>
-    그림 10.5
 </p>
 
 ***●  rotor***<br>
@@ -131,7 +126,6 @@ Gravity는 Y축에 -9.81을 입력한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.6.png"><br>
-    그림 10.6
 </p>
 
 ***●  fluid_to_solid : Thermo-Coupled Wall***<br>
@@ -139,7 +133,6 @@ Gravity는 Y축에 -9.81을 입력한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.7.png"><br>
-    그림 10.7
 </p>
 
 ***●  inner-wall : wall***<br>
@@ -151,7 +144,6 @@ Gravity는 Y축에 -9.81을 입력한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.8.png"><br>
-    그림 10.8
 </p>
 
 ***●  external-wall : wall***<br>
@@ -177,12 +169,10 @@ Under-Relaxation Factors는 Default 값을 사용한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.9.1.png"><br>
-    그림 10.9.1
 </p>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.9.2.png"><br>
-    그림 10.9.2
 </p>
 
 ### (7) Monitoring
@@ -190,7 +180,6 @@ Monitoring tab에서 Add - Surfaces를 클릭 후, 다음과 같이 설정한다
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.10.png"><br>
-    그림 10.10
 </p>
 
 fluid_to_solid 면의 Area-Weighted Average Temperature를 모니터링한다.<br>
@@ -215,7 +204,6 @@ fluid_to_solid 면의 Area-Weighted Average Temperature를 모니터링한다.<b
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.11.png"><br>
-    그림 10.11.1
 </p>
 
 * Region1
@@ -233,7 +221,6 @@ fluid_to_solid 면의 Area-Weighted Average Temperature를 모니터링한다.<b
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.11.png"><br>
-    그림 10.11.2
 </p>
 
 설정 완료 후, Initialize 버튼을 누르면 된다.<br>
@@ -251,7 +238,6 @@ Run Conditions에서 다음과 같이 설정 후 계산을 진행한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.12.png"><br>
-    그림 10.12
 </p>
 
 계산이 완료된 모습
@@ -259,28 +245,3 @@ Run Conditions에서 다음과 같이 설정 후 계산을 진행한다.<br>
 
 
 ## 4) 후처리
-
-### (1) 압력 분포
-덕트 내부 압력 분포를 확인한다.<br>
-paraview 아이콘을 클릭하여 paraview를 실행한다.<br>
-
-Case Type을 Reconstructed Case로 변경한다.
-
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/porousJump/9.10.png"><br>
-    그림 9.10
-</p>
-
-상단 툴바의 Slice 아이콘을 선택하고 Z Normal 버튼을 클릭한다.<br>
-
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/porousJump/9.11.png"><br>
-    그림 9.11
-</p>
-
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/porousJump/9.12.png"><br>
-    그림 9.12
-</p>
-
-이후, 상단의 Solid Color를 p_rgh로 변경하여 덕트 내부 압력 분포를 확인한다.
