--- a/_posts/tutorials/2023-09-05-ABL-post.md
+++ b/_posts/tutorials/2023-09-05-ABL-post.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: 08. ABL
+title: 06. ABL
 category: tutorials
 ---
 
-# 08. ABL 
+# ABL 
  
 * [격자 파일](https://drive.google.com/file/d/19kMYRiWaB84kaUzCoobMRZBKCc_uKxVU/view?usp=drive_link)
 
@@ -17,11 +17,10 @@ category: tutorials
 
 * 격자는 주어진 OpenFOAM 격자를 사용한다<br>
 
-* 그림 8.1에서 형상과 격자를 나타내었다.<br>
+* 아래 그림에서 형상과 격자를 나타내었다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.1.png"><br>
-    그림 8.1
 </p>
 
 계산 조건은 다음과 같다. <br>
@@ -42,12 +41,10 @@ category: tutorials
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.2.png"><br>
-    그림 8.2
 </p>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.3.png"><br>
-    그림 8.3
 </p>
 
 BARAM을 실행하면 아래 과정을 따라서 case 파일을 만든다.<br>
@@ -75,7 +72,6 @@ BARAM을 실행하면 아래 과정을 따라서 case 파일을 만든다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.4.png"><br>
-    그림 8.4
 </p>
 
 ### (3) Materials
@@ -98,7 +94,6 @@ Cell Zone Conditions은 Default 조건을 사용한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.5.png"><br>
-    그림 8.5
 </p>
 
 ***●  Sea : Wall***<br>
@@ -106,7 +101,6 @@ Cell Zone Conditions은 Default 조건을 사용한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.6.png"><br>
-    그림 8.6
 </p>
 
 ***●  outlet : Pressure Outlet***<br>
@@ -114,7 +108,6 @@ Cell Zone Conditions은 Default 조건을 사용한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.7.png"><br>
-    그림 8.7
 </p>
 
 ***●  minY, maxY, sky : Symmetry***<br>
@@ -134,12 +127,10 @@ Numerical Conditions은 다음과 같이 설정한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.8.1.png"><br>
-    그림 8.8.1
 </p>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.8.2.png"><br>
-    그림 8.8.2
 </p>
 
 ### (7) Initialization
@@ -154,7 +145,6 @@ Numerical Conditions은 다음과 같이 설정한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.9.png"><br>
-    그림 8.9
 </p>
 
 ### (8) Run
@@ -170,14 +160,12 @@ Run Conditions에서 다음과 같이 설정 후 계산을 진행한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.10.png"><br>
-    그림 8.10
 </p>
 
 계산이 완료된 모습
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.11.png"><br>
-    그림 8.11
 </p>
 
 ## 4) 후처리
@@ -190,14 +178,12 @@ Case Type을 Reconstructed Case로 변경한다.
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.12.png"><br>
-    그림 8.12
 </p>
 
 상단 툴바의 Solid Color를 U로 변경한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.13.png"><br>
-    그림 8.13
 </p>
 
 상단 툴바의 Plot Over Line 아이콘을 클릭하고 아래와 같이 설정한다.
@@ -212,22 +198,18 @@ Case Type을 Reconstructed Case로 변경한다.
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.14.1.png"><br>
-    그림 8.14.1
 </p>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.14.2.png"><br>
-    그림 8.14
 </p>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.14.3.png"><br>
-    그림 8.14.3
 </p>
 
 아래 그림과 같이 높이에 따른 속도 크기 분포를 확인할 수 있다.
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/ABL/8.15.png"><br>
-    그림 8.15
 </p>
