--- a/_posts/tutorials/2023-09-05-KCS-post.md
+++ b/_posts/tutorials/2023-09-05-KCS-post.md
@@ -1,28 +1,24 @@
 ---
 layout: post
-title: 23. KCS
+title: KCS
 category: tutorials
 ---
 
-# 23. KCS
+# KCS
 
 * [격자 파일](https://drive.google.com/file/d/1GC8NdJuT3Eog9FWQ9M7XyqoCrVOx1TpP/view?usp=sharing)
 
 ## 1) 개요 
--본 예제는 자유수면을 포함하는 선박의 저항 해석에 대한 검증 문제이다.<br>
-
-
-
+* 본 예제는 자유수면을 포함하는 선박의 저항 해석에 대한 검증 문제이다.<br>
 (Measurement of flows around modern commercial ship models, Kim,W J.Kim, Van, S H, Kim,
 D H, Experiments in Fluids, 2001)<br>
 
--자유수면 계산을 위해 interNFoam 솔버를 사용하고, LTS(Local Time Step) 기법을 사용하는 정상상태 계산이다.<br>
+* 자유수면 계산을 위해 interNFoam 솔버를 사용하고, LTS(Local Time Step) 기법을 사용하는 정상상태 계산이다.<br>
 
--그림 23.1에서 형상과 격자를 나타내었다.<br>
+* 아래 그림에서 형상과 격자를 나타내었다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.1.png"><br>
-    그림 23.1
 </p>
 
 계산 조건은 다음과 같다. <br>
@@ -46,7 +42,8 @@ BARAM을 실행하면 아래 과정을 따라서 case 파일을 만든다.<br>
 ● Species Model : Not Include<br>
 
 ## 2) 격자
-
+격자는 주어진 OpenFOAM의 polyMesh 폴더를 활용한다. <br>
+상단 탭에서 File - Load Mesh - OpenFOAM 순서대로 클릭하고 polyMesh 폴더를 선택한다. <br>
 
 ## 3) 계산 조건
 ### (1) General
@@ -55,7 +52,6 @@ Time은 Steady, Gravity는 (0 0 -9.81)로 설정한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.2.png"><br>
-    그림 23.2
 </p>
 
 ### (2) Models
@@ -64,7 +60,6 @@ Time은 Steady, Gravity는 (0 0 -9.81)로 설정한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.3.png"><br>
-    그림 23.3
 </p>
 
 ### (3) Materials
@@ -80,7 +75,6 @@ Time은 Steady, Gravity는 (0 0 -9.81)로 설정한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.4.png"><br>
-    그림 23.4
 </p>
 
 ### (4) Cell Zone Conditions
@@ -89,7 +83,6 @@ Surface Tension은 0으로 입력한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.5.png"><br>
-    그림 23.5
 </p>
 
 ### (5) Boundary Conditions
@@ -97,7 +90,6 @@ Surface Tension은 0으로 입력한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.6.png"><br>
-    그림 23.6
 </p>
 
 ***●  far_inlet : Velocity inlet***<br>
@@ -107,7 +99,6 @@ Surface Tension은 0으로 입력한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.7.png"><br>
-    그림 23.7
 </p>
 
 ***●  far-outlet : Open Channel Outlet***<br>
@@ -117,7 +108,6 @@ Surface Tension은 0으로 입력한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.8.png"><br>
-    그림 23.8
 </p>
 
 ***●  far-top : Pressure Oulet***<br>
@@ -142,7 +132,6 @@ Surface Tension은 0으로 입력한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.9.png"><br>
-    그림 23.9
 </p>
 
 ### (7) Numerical Conditions
@@ -155,7 +144,6 @@ Under-Relaxation Factors는 모두 1을 사용한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.10.png"><br>
-    그림 23.10
 </p>
 
 
@@ -172,7 +160,6 @@ Add-Force 선택후, 관찰하고자 힘의 방향과 영역은 아래와 같이
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.11.png"><br>
-    그림 23.11
 </p>
 
 ### (9) Initialization
@@ -188,7 +175,6 @@ Add-Force 선택후, 관찰하고자 힘의 방향과 영역은 아래와 같이
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.12.png"><br>
-    그림 23.12
 </p>
 
 지정 영역(Water)의 초기조건을 주기위해 Initialization-Advanced-Section-Create 를 클릭한 후 Section Type : Hex 를 선택한다.<br>
@@ -201,7 +187,6 @@ Add-Force 선택후, 관찰하고자 힘의 방향과 영역은 아래와 같이
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/23.13.png"><br>
-    그림 23.13
 </p>
 
 하단의 Initialize 버튼을 클릭한 후, File - Save 버튼을 클릭하여 Case파일을 저장한다.<br>
