10월 26일 1차수정

--- a/_posts/tutorials/2023-09-05-CHT-post.md
+++ b/_posts/tutorials/2023-09-05-CHT-post.md
@@ -6,7 +6,7 @@ category: tutorials
 
 # Conjugate Heat Transfer (CHT)
 
-* [격자 파일](https://drive.google.com/file/d/1f5GOixMllPA3UXtCD2sPAV8vxpfWI6rI/view?usp=sharing)
+## * [격자 파일](https://drive.google.com/file/d/1f5GOixMllPA3UXtCD2sPAV8vxpfWI6rI/view?usp=sharing)
 
 ## 1) 개요 
 * 본 예제는 고체의 열전도를 포함한 열전달 해석 예제이다.<br>
@@ -41,11 +41,11 @@ category: tutorials
 
 ●  유체의 비열 : 1,006J/kg <br>
 
-●  고체의 밀도 : 7,850𝑘𝑔/㎥ <br>
+●  고체의 밀도 : 1,900𝑘𝑔/㎥ <br>
 
-●  고체의 열전도도 : 24.3W/mK <br>
+●  고체의 열전도도 : 0.016W/mK <br>
 
-●  고체의 비열 : 450J/kg <br>
+●  고체의 비열 : 1,004J/kg <br>
 
 BARAM을 실행하면 아래 과정을 따라서 case 파일을 만든다.<br>
 
@@ -72,8 +72,17 @@ Gravity는 Y축에 -9.81을 입력한다.<br>
 난류 모델은 𝑘 − ε 모델을 사용하고 나머지는 Default를 사용한다. <br>
 
 ### (3) Materials
-본 예제에서는 공기를 작동 유체로 알루미늄을 (Aluminum, Al) 고체로 사용한다.<br>
+본 예제에서는 공기와 Solid라는 고체를 사용한다.<br>
 물성치는 아래 값들을 사용한다.<br>
+Materials의 +버튼을 클릭하여 고체 하나를 생성한 후, 다음과 같이 물성치를 변경한다.<br>
+
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.2.1.png"><br>
+</p>
+
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.2.2.png"><br>
+</p>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.2.png"><br>
@@ -91,14 +100,14 @@ Gravity는 Y축에 -9.81을 입력한다.<br>
 ```Molecular Weight : 28.966```<br>
 ```Absorption Coefficient : 0.0```<br>
 
-***●  Aluminum***<br>
-```Density : 2,707```<br>
+***●  Solid***<br>
+```Density : 1,900```<br>
 ```Specific Heat (C<sub>p</sub>) : 896```<br>
 ```Thermal Conductivity : 204```<br>
 ```Emissivity : 0.039```<br>
 
-물성치에 흡수율과 방사율이 설정된다.<br>
-하지만, 해석에서는 복사를 고려하지 않으므로 고려되지 않는다. <br>
+물성치에서는 Emissivity를 설정한다.<br>
+하지만 실제 해석은 복사 모델없이 진행되므로 고려되지 않는다.<br>
 
 ### (4) Cell Zone Conditions
 본 예제에서는 유체 영역 내부에 rotor가 회전한다.<br>
@@ -165,7 +174,7 @@ Numerical Conditions은 다음과 같이 설정한다.<br>
 ●  Under-Relaxation Factors<br>
 Under-Relaxation Factors는 Default 값을 사용한다.<br>
 
-●  Convergence Criteria는 Default값을 사용한다.<br>
+●  Convergence Criteria는 Energy만 1e-6을 사용한다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.9.1.png"><br>
@@ -242,6 +251,36 @@ Run Conditions에서 다음과 같이 설정 후 계산을 진행한다.<br>
 
 계산이 완료된 모습
 
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.13.png"><br>
+</p>
 
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.14.png"><br>
+</p>
 
 ## 4) 후처리
+paraview 아이콘을 클릭하여 paraview를 실행한다.<br>
+Mesh Regions에서 Region0/internalMesh와 Region1/internalMesh가 활성화된 것을 확인한다.<br>
+유체와 고체의 격자 모두 활성화한다는 의미이다.<br>
+이후, Case Type은 Reconstructed Case로 변경하고 Apply를 클릭한다.<br>
+
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.15.png"><br>
+</p>
+
+상단의 탭에서 vtkBlockColors라고 되어 있는 설정을 온도, T로 변경한다.
+
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.16.png"><br>
+</p>
+
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.17.png"><br>
+</p>
+
+아래 그림과 같이 해석 영역 내부의 온도 분포를 확인할 수 있다.
+
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.18.png"><br>
+</p>
