10월 26일 3차 수정

--- a/_posts/tutorials/2023-09-05-CHT-post.md
+++ b/_posts/tutorials/2023-09-05-CHT-post.md
@@ -6,7 +6,7 @@ category: tutorials
 
 # Conjugate Heat Transfer (CHT)
 
-## * [격자 파일](https://drive.google.com/file/d/1f5GOixMllPA3UXtCD2sPAV8vxpfWI6rI/view?usp=sharing)
+## * [격자 파일 다운로드](https://drive.google.com/file/d/1f5GOixMllPA3UXtCD2sPAV8vxpfWI6rI/view?usp=sharing)
 
 ## 1) 개요 
 * 본 예제는 고체의 열전도를 포함한 열전달 해석 예제이다.<br>
