--- a/_posts/tutorials/2023-09-05-weir-post.md
+++ b/_posts/tutorials/2023-09-05-weir-post.md
@@ -6,7 +6,7 @@ category: tutorials
 
 # Weir
 
-## * [격자 파일](https://drive.google.com/file/d/1ODSzqSH9TfIjkmnVNm5p5XLBPX-gjplN/view?usp=sharing)
+## * [격자 파일 다운로드](https://drive.google.com/file/d/1ODSzqSH9TfIjkmnVNm5p5XLBPX-gjplN/view?usp=sharing)
 
 ## 1) 개요 
 * 본 예제는 사각 위어의 다상유동을 해석하는 예제이다.<br>
