paraview 실행 방법 수정

--- a/_posts/tutorials/2023-09-05-weir-post.md
+++ b/_posts/tutorials/2023-09-05-weir-post.md
@@ -192,8 +192,8 @@ Run Conditions 에서 다음과 같이 설정 후 계산을 진행한다.<br>
 
 
 ## 4) 후처리
-용기 내부 자유수면을 후처리한다.<br>
-paraview 아이콘을 클릭하여 paraview를 실행한다.<br>
+용기 내부 자유수면을 그려본다.<br>
+External tools의 paraview 버튼을 클릭하여 paraview를 실행한다.<br>
 
 Case Type을 Decomposed Case로 변경한다.<br>
 
