--- a/_posts/tutorials/2023-09-05-CHT-post.md
+++ b/_posts/tutorials/2023-09-05-CHT-post.md
@@ -260,7 +260,7 @@ Run Conditions에서 다음과 같이 설정 후 계산을 진행한다.<br>
 </p>
 
 ## 4) 후처리
-paraview 아이콘을 클릭하여 paraview를 실행한다.<br>
+External tools의 paraview 버튼을 눌러 paraview를 실행한다.<br>
 Mesh Regions에서 Region0/internalMesh와 Region1/internalMesh가 활성화된 것을 확인한다.<br>
 유체와 고체의 격자 모두 활성화한다는 의미이다.<br>
 이후, Case Type은 Reconstructed Case로 변경하고 Apply를 클릭한다.<br>
