weir Mesh가이드 추가, weir tutorial guide 수정

--- a/_posts/tutorials/2023-09-05-weir-post.md
+++ b/_posts/tutorials/2023-09-05-weir-post.md
@@ -4,217 +4,298 @@ title: 10. Weir
 category: tutorials
 ---
 
-# Weir
+## * [격자 파일 다운로드](https://drive.google.com/file/d/1f5GOixMllPA3UXtCD2sPAV8vxpfWI6rI/view?usp=sharing)
 
-## * [격자 파일 다운로드](https://drive.google.com/file/d/1ODSzqSH9TfIjkmnVNm5p5XLBPX-gjplN/view?usp=sharing)
-
-## 1) 개요 
-* 본 예제는 사각 위어의 다상유동을 해석하는 예제이다.<br>
-
-* 입구 수면 높이가 정해져 있을때 유량을 계산하는 문제이며, 물이 유입되는 입구의 수두에 해당하는 압력조건을 사용한다.<br>
-
-* 아래 그림에서 형상과 격자를 나타내었다.<br>
+# 1) Weir 개요 
+<br>
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.1.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/main.png"><br> wave height
 </p>
 
-계산 조건은 다음과 같다. <br>
+위어(Weir)는 수공학에서 수로에 설지하는 구조물로 물이 넘치게 만들어 특정 수위를 유지하거나 유량을 측정하는데 사용한다. CFD에서는 이론식으로 구할 수 있는 유량과 해석 결과를 비교하여 코드 검증용으로 사용하기도 한다.
 
-●  solver : interFoam <br>
+본 예제는 사각 위어에서 수위가 일정한 경우에 유량 해석을 위한 예제이다.
 
-●  난류모델 : Realizable 𝑘 − ε <br>
+계산 조건은 다음과 같다.
 
-BARAM을 실행하면 아래 과정을 따라서 case 파일을 만든다.<br>
+* 물의 입구 수위 : 1.6 m, 15696 Pa
 
-●  New Case버튼 클릭<br>
+* solver : interFoam
 
-●  Project Name : weir<br>
+* 난류모델 : standard 𝑘 − ε 
+<br>
 
-●  Flow Type : incompressible<br>
+# 2) 프로그램의 구동
 
-●  Multiphase Model : Volume of Fluid<br>
+프로그램 실행 후 launcher에서 'Open'을 선택하고 격자 생성 튜토리얼에서 만든 weir 폴더를 선택한다(혹은 New Case를 선택하고 메뉴의 File - Load Mesh - OpenFOAM에서 weir/case/constant 폴더를 선택한다).
 
-●  Gravity : X: 0, Y: 0, Z: -9.81<br>
-
-● Species Model : Not Include<br>
-
-## 2) 격자
-
-격자는 주어진 OpenFOAM의 polyMesh 폴더를 활용한다. <br>
-상단 탭에서 File - Load Mesh - OpenFOAM을 순서대로 클릭하고 polyMesh 폴더를 선택한다. <br>
-
-## 3) 계산 조건
-### (1) General
-
-Time 을 Transient로 변경한다.<br>
-나머지는 Default로 설정한다.<br>
+'Flow Type'은 Incompressible, 'Multiphase Model'은 Volume of Fluid', Gravity는 (0 0 -9.81), 'Species'는 Not Include를 선택한다.
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.2.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/launcher.png"><br> launcher 설정
 </p>
+<br>
 
-### (2) Models
+# 3) 계산 조건
+<br>
+## (1) General
 
-난류 모델은 Realizable 𝑘 − ε  모델을 사용하고 나머지는 Default로 사용한다.<br>
+Time 을 Transient로 변경하고 나머지는 디폴트를 사용한다.
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.3.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/general.png"><br> General 설정
 </p>
+<br>
 
-### (3) Materials
+## (2) Models
 
-본 예제는 다상유동이므로 2개 이상의 유동이 필요하다. 물성치는 다음과 같이 설정하여 추가하여준다.<br>
-
-***●  Liquid***<br>
-```Density : 10000```<br>
-```Viscosity : 0.001```<br>
-
-***●  Gas***<br>
-```Density : 1.225```<br>
-```Viscosity : 1.79e-5```<br>
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.4.png"><br>
-</p>
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.5.png"><br>
-</p>
-
-### (4) Cell Zone Conditions
-Cellzome에 2가지의 유체가 포함되어 있으므로 아래와 같이 Primary Material에 air, Secondary materialsdms Liquid로 지정해준다.<br>
-Surface Tension은 0.07로 입력한다.<br>
+난류 모델은 standard 𝑘 − ε  모델을 사용하고 나머지는 디폴트를 사용한다.
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.6.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/turbulence.png"><br> Turbulence Model 설정
 </p>
+<br>
 
-### (5) Boundary Conditions
-아래와 같이 경계면 타입과 경계값을 설정한다.<br>
-이때, 물이 유입되는 입구의 수두에 해당하는 압력조건을 사용한다.<br>
+## (3) Materials
+
+본 예제는 이상유동이므로 두 개의 유체가 필요하다. Material Configuration 부분의 상단 오른쪽의 (+)를 누르면 유체를 추가할 수 있다. water-liquid를 추가하고 이름을 water로 바꾸어 준다.
+
+* water
+
+  + density : 1000
+  
+  + viscosity : 0.001
+  
+* air
+
+  + density : 1.225
+  
+  + viscosity : 1.79e-5
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.7.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/material.png"><br> Materials 설정
 </p>
+<br>
 
-***●  waterin : pressure Inlet***<br>
-```totalPressure : 15696```<br>
-```Turbulnent Intensity : 1(%)```<br>
-```Turbulnent Viscosity Ratio : 10```<br>
-```Volume Fraction (Liquid) : 1```<br>
+## (4) Cell Zone Conditions
+
+Cell Zone Conditions에는 region0가 있다.(multi-region일 때는 여러개의 region이 표시된다.) region의 유체를 설정한다. region0를 더블 클릭하면 설정창이 열린다. Primary Material은 air, Secondary material은 water로 지정한다.
+Surface Tension은 0을 사용한다.
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.8.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/region.png"><br> Cell Zone Conditions 설정
+</p>
+<br>
+
+## (5) Boundary Conditions
+
+경계조건은 다음과 같이 설정한다.
+
+* water-in
+
+  + type : Pressure Inlet
+  
+  + Total Pressure : 15696
+  
+  + Turbulent Intensity : 1
+  
+  + Turbulent Viscosity Ratio : 10
+  
+  + Volume Fraction(water) : 1
+  
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/inlet.png"><br> water-in 경계조건
 </p>
 
-***●  open : pressure Outlet***<br>
-```totalPressure : 0```<br>
+* air-in
+
+  + type : Pressure Inlet
+  
+  + Total Pressure : 0
+  
+  + Turbulent Intensity : 1
+  
+  + Turbulent Viscosity Ratio : 10
+  
+  + Volume Fraction water : 0
+  
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/inlet-air.png"><br> air-in 경계조건
+</p>
+
+* top
+
+  + type : Pressure Outlet
+  
+  + Total Pressure : 0
+  
+  + Backflow Turbulent Intensity : 1
+  
+  + Backflow Turbulent Viscosity Ratio : 10
+  
+  + Backflow Volume Fraction(water) : 0
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.9.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/top.png"><br> far_top 경계조건
 </p>
 
-***●  weir, bottom : wall(adiabatic)***<br>
+* out, out-1
 
-***●  rightside, leftside : symmetry***<br>
+  + type : Outflow
+  
+* weir, bottom
 
-***●  out : out flow***<br>
+  + type : wall
+  
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/wall.png"><br> wall 경계조건
+</p>
+
+* front, front-1, back, back-1
+
+  + type : symmetry
+<br>
+
+## (6) Numerical Conditions
+
+수치해석 조건은 다음과 같이 설정한다.
+
+* Pressure-Velocity Coupling Scheme : SIMPLE(디폴트)
+
+* Use Momentum Predictor : On(디폴트)
+
+* Discretization Schemes
+
+  + Time : First Order Implicit
+  
+  + Momentum : Second Order Upwind
+  
+  + Turbulence : First Order Upwind
+  
+  + Volume Fraction : Second Order Upwind
+
+* Under-Relaxation Factors : 모두 1로 설정
+
+* Improve Stability : Off(디폴트)
+
+* Max Iteration per Time Step : 1
+
+* Number of Correctors : 2
+
+* Multiphase와 Convergence Criteria : 디폴트 사용
+  
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/numerical.png"><br> Numerical Conditions
+</p>
+<br>
+
+## (7) Monitoring
+
+Add-Surface 선택후 Report Type은 Volume Flow Rate, 관찰하고자 하는 영역은 waterin으로 선택한다.>
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.20.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/monitor.png"><br> 유량 모니터링 설정
 </p>
+<br>
 
-***●  airin : pressure Inlet***<br>
-```totalPressure : 0```<br>
-```Turbulnent Intensity : 1(%)```<br>
-```Turbulnent Viscosity Ratio : 10```<br>
-```Volume Fraction (Liquid) : 0```<br>
+## (8) Initialization
 
-### (6) Numerical Conditions
+초기조건은 다음과 같이 입력한다.
 
-Default값으로 설정한다.<br>
+* velocity : (0 0 0)
 
-### (7) Monitoring
+* Pressure : 0
 
-Add-Surface 선택후 Report Type은 Volume Flow Rate, 관찰하고자 하는 영역은 waterin으로 선택하여준다.<br>
+* Scale of Velocity : 1
+
+* Turbulent Intensity : 1
+
+* Turbulent Viscosity Ratio : 10
+
+* Volume Fraction(water) : 0
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.21.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/initial.png"><br> 초기조건 설정
 </p>
 
-### (8) Initialization
+water 영역의 초기조건을 주기 위해 두 개의 섹션을 만든다.
 
-Liquid 외 영역의 초기조건은 다음과 같이 입력한다.<br>
+Initialization-Advanced-Section-Create 를 클릭한 후 다음과 같이 설정한다.
 
-```velocity : (0 0 0)```<br>
-```Pressure : 0```<br>
-```Scale of Velocity : 1```<br>
-```Turbulent Intensity : 1```<br>
-```Turbulent Viscosity Ratio : 10```<br>
-```Volume Fraction - Liquid : 0```<br>
+* region1
+
+  + Min.point : (0.05 -1 0)
+  
+  + Max.point : (2 1 0.2)
+
+  * Volume Fraction(water) : 1
+
+* region2
+
+  + Min.point : (-2 -1 0)
+  
+  + Max.point : (-0.05 1 1.6)
+
+  * Volume Fraction(water) : 1
+  
+Override Boundary Value 옵션은 사용하지 않는다.
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.12.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/setFields.png"><br> Section 초기화
 </p>
 
-Liquid 영역의 초기조건을 주기위해 Initialization-Advanced-Section-Create 를 클릭한 후 Section Type : Hex 를 선택한다.<br>
-생성할 영역의 초기조건들을 아래와 같이 입력한다.<br>
-
-***●  region-1***<br>
-```Min.point : (0.05 -1 0)```<br>
-```Max.point : (2 1 0.2)```<br>
-```Volume Fraction - Liquid : 1```<br>
-
-
-***●  region-2***<br>
-```Min.point : (-2 -1 0)```<br>
-```Max.point : (-0.05 1 1.6)```<br>
-```Volume Fraction - Liquid : 1```<br>
+Advanced - Sections에 두 개의 섹션이 만들어졌고 각 항목의 눈 모양 표시를 클릭하면 영역을 디스플레이 할 수 있다.
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.13.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/setFieldsDisplay.png"><br> 초기화 영역 디스플레이
 </p>
 
-지정해준 초기조건의 영역은 아래와 같다.<br>
+하단의 Initialize 버튼을 클릭한 후, File - Save 버튼을 클릭하여 설정을 저장한다.
+<br>
+
+## (9) Run Conditions & Run
+
+Run Conditions 에서 다음과 같이 설정 후 계산을 진행한다.
+
+* Time Stepping Method : Adaptive
+
+* Max Courant Number : 1
+
+* Max Courant Number for VoF : 1
+
+* End time : 20
+
+* Save Interval : 0.1
+
+병렬연산을 위해서는 메뉴의 Parallel을 실행하고 원하는 CPU 코어 개수를 입력한다.
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.14.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/run.png"><br> 유량 모니터링 화면
+</p>
+<br>
+
+# 4) 후처리
+
+물의 흐름을 그려본다.
+
+External tools의 paraview 버튼을 클릭하여 paraview를 실행하고 baram.foam 파일을 읽는다.
+
+병렬로 계산했다면 Case Type을 Decomposed Case로 변경한다.
+
+<p align='left'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/clip.png"> Clip 필터를 이용해서 Volume fraction이 0.5 이상인 영역을 잘라준다.
 </p>
 
-하단의 Initialize 버튼을 클릭한 후, File - Save 버튼을 클릭하여 Case파일을 저장한다.<br>
-
-### (9) Run
-Run Conditions 에서 다음과 같이 설정 후 계산을 진행한다.<br>
-
-```Time Stepping Method : Adaptive```<br>
-```End time : 10```<br>
-```Number of Cores : 4```<br>
-```Data Write Precision: 6```<br>
-
-
-## 4) 후처리
-용기 내부 자유수면을 그려본다.<br>
-External tools의 paraview 버튼을 클릭하여 paraview를 실행한다.<br>
-
-Case Type을 Decomposed Case로 변경한다.<br>
-
-Ctrl + Space를 눌러 Iso Surface를 검색한다.<br>
+Field를 U로 변경한다. Pipeline Browser의 baram.foam을 Outline으로 표시하고, weir.stl 파일을 읽어 Solid Color로 표시하면 아래 그림과 같이 된다.
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.15.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/pvClip.png"><br> Clip water 
 </p>
 
-이후, Properties 탭에서 설정을 아래와 같이 변경한다.<br>
-
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.16.png"><br>
+<p align='left'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/play.png"> Play 버튼을 누르면 동영상을 볼 수 있다.
 </p>
 
-Field를 U로 변경하고 Play 버튼을 누르면 다음과 같은 모습을 볼 수있다.<br>
 
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.17.png"><br>
-</p>
 
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/19.18.png"><br>
-</p>
