--- a/_posts/userguide/userguidelist/2023-09-05-menu-post.md
+++ b/_posts/userguide/userguidelist/2023-09-05-menu-post.md
@@ -23,7 +23,7 @@ category: userguidelist
 
 격자를 불러온다. 지원하는 격자 파일 포맷은 다음과 같다.
 
-* openfoam : multi-region인 경우 constant 폴더를 선택하고 single-region인경우 polyMesh 폴더를 선택
+* openfoam : constant 혹은 polyMesh 폴더를 선택한다. multi-region인 경우는 여러 개의 polyMesh 폴더가 있기 때문에 constant 폴더를 선택히야 한다. multi-region 격자에서 특정한 polyMesh 폴더를 선택하면 해당 부분만 읽어 온다.
 
 * Fluent Mesh : msh/cas 파일을 변환한다. 아스키 파일만 가능. 계산영역 내부에 있는 경계면(interior 혹은 wall)의 정보는 faceSet으로 변환된다. fluentMeshToFoam 유틸리티를 사용하며 -writeZones -writeSets 옵션을 사용한다. 
 
