pcb 추가 및 CHT 수정

--- a/_posts/tutorials/2023-09-05-CHT-post.md
+++ b/_posts/tutorials/2023-09-05-CHT-post.md
@@ -37,7 +37,7 @@ category: tutorials
 
 ●  유체의 점성 계수 : 1.79e-5𝑘𝑔/𝑚s <br>
 
-●  유체의 열전도도 : 1.79e-5W/mK <br>
+●  유체의 열전도도 : 0.0245W/mK <br>
 
 ●  유체의 비열 : 1,006J/kg <br>
 
