pcb residuals 우선 제외

--- a/_posts/tutorials/2023-09-05-PCB-post.md
+++ b/_posts/tutorials/2023-09-05-PCB-post.md
@@ -342,11 +342,7 @@ Parallel에서 Number of Cores는 8로 설정한다.<br>
 이후 계산을 진행한다.
 
 ## 4) 후처리
-계산이 완료된 시점에서 Residuals과 Monitoring은 아래와 같다.<br>
-
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/pcb/29.png"><br>
-</p>
+계산이 완료된 시점에서 Monitoring 값은 아래와 같다.<br>
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/pcb/30.png"><br>
