--- a/_posts/userguide/userguidelist/2023-09-05-run-post.md
+++ b/_posts/userguide/userguidelist/2023-09-05-run-post.md
@@ -6,6 +6,8 @@ category: userguidelist
 
 # Run
 
+## Start & Stop
+
 Start Calculation을 누르면 계산을 시작한다. 계산이 시작되면 Cancle Calcuation, Save and Stop Calculation, Update Configuration이 활성화 된다.
 
 <p align='center'>
@@ -16,3 +18,40 @@ Cancle Calcuation은 계산을 강제로 중지한다. Save and Stop Calculation
 
 계산이 시작되면 Numerical Conditions, Monitors, Run Conditions만 활성화되고 나머지는 비활성화 된다. <span style="color:blue">활성화 된 항목들에서 설정을 수정하고 Update Configuration을 누르면 변경된 내용을 적용하여 계산이 계속 진행된다.</span>
 
+## User Parameters
+
+사용자 정의 변수(User Parameter)를 지정해서 사용할 수 있다. Batch Running Mode에서 주로 사용되는 기능이다.
+
+아래 그림은 UX, UY 2개의 변수를 지정한 사례이다. Name의 괄호 속에 있는 숫자는 이 변수가 몇 군데서 사용되고 있는지는 나타내는데 여기서는 0이므로 아무 곳에도 사용되고 있지 않음을 나타낸다. Default Value는 Batch Running Mode가 아닐 때 이 변수에 할당되는 값이다.
+
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/pic/userParameter0.png"> <br> User Parameter 설정 예
+</p>
+
+변수의 선언, 수정, 삭제는 Edit 버튼을 누르면 나타나는 아래 그림과 같은 창을 사용한다. Parameter Values 옆에 있는 (+)를 누르면 새로 추가된다. 변수의 이름은 영문 대문자와 숫자 그리고 언더스코어('_')만 사용될 수 있으며 영문 대문자로 시작해야 한다. 변수 오른쪽의 휴지통 그림을 클릭하면 삭제된다. 코드에서 사용되고 있는 변수는 삭제되지 않는다.
+
+
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/pic/userParameter.png"> <br> User Parameter Edit 창
+</p>
+
+경계조건, 초기조건 등 숫자를 입력하는 부분에 달러('\$')  부호를 앞에 쓰고 변수를 입력하면 된다. Velocity Inlet 경계조건의 X-Velocity 에 UX 변수를 사용하고 싶다면 '$UX' 라고 쓰면 된다.
+
+## Batch Running Mode
+
+'Switch to Batch Running Mode' 버튼을 누르면 아래의 그림과 같이 'Batch Cases' 라는 부분이 나타나고 버튼은 'Switch to Live Running Mode'로 바뀐다. Live Running Mode는 Batch Run이 아닌 하나의 조건에 대해 계산하는 일반적인 방식이다.
+
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/pic/batchCases.png"> <br> User Parameter Edit 창
+</p>
+
+위의 그림은 Import 버튼을 눌러 아래 그림과 같이 조건이 설정된 csv 파일을 읽은 상태이다. 읽을 수 있는 파일 형식은 csv와 xlsx 파일이다. 파일에서 var, case1, case2, case3 등은 임의로 사용자가 적어주면 되지만 변수명인 UX, UY는 User Parameter에서 정의된 것을 사용해야 한다.
+
+위 그림에서 'Calc.'와 'Result'라는 column이 있다. Case를 선택하고(드래그앤드랍으로 여러개 선택 가능) 마우스 오른쪽 버튼을 눌러 Schedule Calculation을 선택하면 'Calc.'에 체크 표시가 된다. Cancel Calculation을 선택하면 체크 표시가 사라진다. 
+
+Start Calculation 버튼을 누르면 'Calc.'에 체크된 케이스들이 순차적으로 계산된다. 계산이 완료된 것은 'Result'에 초록색으로 표시되고 계산 중 발산한 경우는 빨간색으로 표시된다. 모든 계산이 종료된 후 케이스를 오른쪽 마우스 버튼으로 Load를 선택하면 해당 케이스의 Residual, monitoring 그래프가 나타나고 ParaView에서 결과를 확인할 수 있다.
+
+
+<p align='center'>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/pic/csvExample.png"> <br> csv 파일 예
+</p>
