--- a/_posts/userguide/userguidelist/2023-09-05-menu-post.md
+++ b/_posts/userguide/userguidelist/2023-09-05-menu-post.md
@@ -25,9 +25,7 @@ category: userguidelist
 
 * openfoam : constant 혹은 polyMesh 폴더를 선택한다. multi-region인 경우는 여러 개의 polyMesh 폴더가 있기 때문에 constant 폴더를 선택히야 한다. multi-region 격자에서 특정한 polyMesh 폴더를 선택하면 해당 부분만 읽어 온다.
 
-* Fluent Mesh : msh/cas 파일을 변환한다. 아스키 파일만 가능. 계산영역 내부에 있는 경계면(interior 혹은 wall)의 정보는 faceSet으로 변환된다. fluentMeshToFoam 유틸리티를 사용하며 -writeZones -writeSets 옵션을 사용한다. 
-
-* Fluent Case : msh/cas 파일을 변환한다. 아스키 파일만 가능. cas 파일의 경우 계산영역 내부에 있는 경계면(interior 혹은 wall)의 정보는 boundary로 변환된다. fluent3DMeshToFoam 유틸리티를 사용한다. 
+* Fluent : msh/cas 파일을 변환한다. 아스키 파일만 가능하다. 
 
 * StarCCM+ : ccm 파일을 변환한다. libccmio 라이브러리가 있어야 한다. 리눅스에서만 지원된다. 
 
@@ -48,7 +46,9 @@ category: userguidelist
 <!------------------------------------------------------------------>
 ## Mesh
 
-격자를 축소/확대(Scale), 이동(Translate), 회전(Rotate)한다.
+격자 정보 출력, 축소/확대(Scale), 이동(Translate), 회전(Rotate)한다.
+
+Mesh Info.는 cell 정보와 도메인 크기를 보여준다.
 
 Scale은 x, y, z 각 방향의 비율을 입력한다.
 
