--- a/_posts/tutorials/2023-09-05-CHT-post.md
+++ b/_posts/tutorials/2023-09-05-CHT-post.md
@@ -215,14 +215,13 @@ Run Conditions에서 다음과 같이 설정 후 계산을 진행한다.
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.12.png"><br>
 </p>
 
-계산이 완료된 모습
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.13.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.13.png"><br>residual plot
 </p>
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.14.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.14.png"><br>monitoring
 </p>
 
 ## 13. 후처리
