--- a/_posts/tutorials/2023-09-05-CHT-post.md
+++ b/_posts/tutorials/2023-09-05-CHT-post.md
@@ -149,6 +149,7 @@ Numerical Conditions은 다음과 같이 설정한다.
 + Pressure-Velocity Coupling Scheme : SIMPLE
 
 + Discretization Schemes
+    + Pressure : Momentum Weighted Reconstruct
     + Momentum : Second Order Upwind
     + Energy : Second Order Upwind
     + Turbulence : First Order Upwind
@@ -161,9 +162,6 @@ Numerical Conditions은 다음과 같이 설정한다.
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.9.1.png"><br>
 </p>
 
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.9.2.png"><br>
-</p>
 
 ## 10. Monitoring
 
