--- a/_posts/tutorials/2023-09-05-KCS-post.md
+++ b/_posts/tutorials/2023-09-05-KCS-post.md
@@ -41,12 +41,12 @@ _Measurement of flows around modern commercial ship models, Kim,W J.Kim, Van, S 
 정상상태 계산이기 때문에 모든 설정은 디폴트 조건을 사용한다. launcher에서 설정한 중력이 표시된다. Launcher에서 중력을 주지 않았을 때 여기서 설정할 수 있다.
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/general.png"><br> General 설정
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/general.png"><br> General 설정
 </p>
 
 ## 4. Models
 
-난류 모델은 _SST k - omega_ 모델을 사용하고 나머지는 Default를 사용한다.
+난류 모델은 $SST$ $k-\omega$ 모델을 사용하고 나머지는 Default를 사용한다.
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/turbulence.png"><br> Turbulence Model 설정
@@ -144,7 +144,7 @@ Surface Tension은 0을 사용한다.
 
 + Pressure-Velocity Coupling Scheme : SIMPLE(디폴트)
 + Use Momentum Predictor : Off
-+ Discretization Schemes : 모두 Second Order Upwind
++ Discretization Schemes : Pressure는 Momentum Weighted Reconstruct, 나머지는 모두 Second Order Upwind
 + Under-Relaxation Factors : 모두 1
 + Improve Stability : Off(디폴트)
 + Max Iteration per Time Step : 1
