--- a/_posts/tutorials/2023-09-05-KCS-post.md
+++ b/_posts/tutorials/2023-09-05-KCS-post.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 11. KCS - Drag prediction of a ship with VOF model
+title: 11. Resistance of KCS Hull - Multiphase(VOF) Flow
 category: tutorials
 ---
 
