--- a/_posts/tutorials/2024-03-21-rae2822-post.md
+++ b/_posts/tutorials/2024-03-21-rae2822-post.md
@@ -10,12 +10,15 @@ category: tutorials
 
 ## 1. 개요
 
+![격자 및 압력분포]("https://github.com/nextfoam/baram-pages/raw/main/screenshots/RAE2822/rae-mesh.png")
+<!---
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/RAE2822/rae-mesh.png">
     <br> 격자 및 압력분포
 </p>
+--->
 
-본 예제는 밀도기반 솔버를 사용하는 정상상태 압축성 유동해석 예제이다. RAE2822 에어포일 천음속 유동 validation 문제로 아래의 웹사이트의 조건을 사용한다.
+본 예제는 밀도기반 솔버를 사용하는 정상상태 압축성 유동해석 예제이다. RAE2822 에어포일 천음속 유동 validation 문제로 아래 웹사이트의 조건을 사용한다.
 
 [https://www.grc.nasa.gov/www/wind/valid/raetaf/raetaf01/raetaf01.html](https://www.grc.nasa.gov/www/wind/valid/raetaf/raetaf01/raetaf01.html)
 
